# space_game

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml
game/: Cargo.toml  index.html
game/assets/shaders/: planet.wgsl
game/src/: main.rs
game/src/gameplay/: mod.rs  planet.rs  ship.rs
game/src/multiplayer/: mod.rs
game/src/multiplayer/client/: mod.rs  tcp_client.rs
game/src/multiplayer/server/: mod.rs  tcp_server.rs
game/src/render/: free_camera.rs  mod.rs  orbit_camera.rs
game/src/render/planet/: chunk.rs  material.rs  mesh.rs  mod.rs
game/src/ui/: mod.rs  time.rs
orbits/: Cargo.toml
orbits/src/: basics.rs  lib.rs  plugin.rs  solver.rs  time.rs
