[workspace]
resolver = "2"
members = ["game", "orbits"]

[workspace.dependencies]
bevy = { version = "0.14.2", features = [] }
bevy_egui = { version="0.30.1", default-features = false, features = ["default_fonts", "open_url", "render"] }
bincode = "1.3.3"
crossbeam-channel = "0.5.13"
egui_extras = { version = "0.29.1", features = ["all_loaders"]}
nalgebra = "0.33.2"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["sync", "macros", "net", "io-util", "rt", "rt-multi-thread"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
