[workspace]
resolver = "2"
members = ["game", "orbits"]

[workspace.dependencies]
bevy = { version = "0.16.1", features = [] }
bevy_egui = { version="0.35.1", default-features = false, features = ["default_fonts", "open_url", "render"] }
bincode = "2.0.1"
crossbeam-channel = "0.5.13"
egui_extras = { version = "0.31.0", features = ["all_loaders"]}
nalgebra = "0.33.2"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["sync", "macros", "net", "io-util", "rt", "rt-multi-thread"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
