[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = "0.28.0"
bevy_egui = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
egui_extras = { workspace = true }
orbits = { path = "../orbits"}
serde = { workspace = true }
tokio = { workspace = true }

[features]
server = []
client = []
default = ["server", "client"]
